--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="48dp">
+    android:padding="48dp"
+    android:background="@drawable/background_gradient">
 
     <Spinner
         android:layout_width="match_parent"
